--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,16 @@ body {
 }
 
 .line-list {
-  flex-basis: 250px;
+  flex-basis: 500px;
   flex-shrink: 0;
   background-color: #fff;
-  overflow-y: auto;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   padding: 20px;
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
+  height: 100%;
+  
 }
 
 .add-line-button {
@@ -28,11 +30,23 @@ body {
 }
 
 .line-details {
-  flex-grow: 1;
-  padding: 20px;
+  flex-direction: column;
+  display: block;
+  flex: 0 0 auto;
+
+  padding-right: 20px;
+  padding-left: 20px;
+
   background-color: #fff;
   overflow-y: auto;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+}
+.line-details-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+
 }
 
 .burger-menu {
@@ -97,9 +111,31 @@ input {
 input:focus {
   border-color: #555;
 }
+.button-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
+.button-list button {
+  padding: 10px 15px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button-list button:hover {
+  opacity: 0.8;
+}
 button {
   padding: 10px;
+  margin: 2px;
   border: none;
   border-radius: 4px;
   color: #fff;
@@ -117,6 +153,7 @@ button:active {
 }
 .arabic-text {
   direction: rtl;
+  font-size: 18px;
   text-align: right;
 
 }
@@ -148,7 +185,7 @@ button:active {
 .english-detail {
   text-align: left;
   font-family: 'Georgia', serif;
-  font-size: 25px;
+  font-size: 22px;
   color: #4a4a4a;
   flex: 1;
   min-width: 0; /* Added to prevent flex items from overflowing */
@@ -226,6 +263,59 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+.create-line-form-container {
+  flex-grow: 1;
+  padding: 20px;
+  background-color: #fff;
+  overflow-y: auto;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.create-line-form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 600px;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+.create-line-form-group {
+  margin-bottom: 20px;
+}
+
+.create-line-form textarea {
+  width: 100%;
+  height: 100px;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: vertical;
+}
+
+.create-line-form-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.create-line-form button {
+  padding: 10px 15px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.create-line-form button:hover {
+  opacity: 0.8;
+}
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100%;
 }
 @media (max-width: 768px) {
   .line-list {
