--- a/src/index.css
+++ b/src/index.css
@@ -110,7 +110,15 @@ form {
 label {
   margin-bottom: 10px;
 }
-
+textarea{
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  transition: border-color 0.3s;
+}
 input {
   width: 100%;
   padding: 8px;
