--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,16 @@ label {
   box-sizing: border-box;
   transition: border-color 0.3s;
 }
+.edit-fields-arabic{
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  transition: border-color 0.3s;
+  direction:rtl;
+}
 input {
   width: 100%;
   padding: 8px;
