--- a/src/index.css
+++ b/src/index.css
@@ -451,4 +451,10 @@ hr {
   .tray {
     display: block; /* Show the tray on mobile */
   }
+  .text-container{
+    display: block;
+  }
+  .detail-container{
+    margin: 0px;
+  }
 }
