--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,14 @@ button:active {
   margin: 10px;
 }
 
+.book-detail{
+  margin: 10px;
+  padding-right: 20px;
+  padding-left: 20px;
+  border-radius: 10px;
+  border: 2px solid #333;
+}
+
 .arabic-detail {
   text-align: right;
   font-size: 25px;
@@ -253,7 +261,7 @@ button:active {
 }
 
 .commentary-detail,
-.rootword-detail {
+.rootword-detail, .book-detail{
   font-family: 'Georgia', serif;
   font-size: 16px;
   margin-top: 10px;
